# ClueMind

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_zh.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  MINDSCAPE_RESEARCH.md  SETUP.md  index.html
sidecar/: requirements.txt
sidecar/sidecar/: __init__.py  communication.py  main.py
sidecar/tests/: test_framework_agent.py  test_llm_provider.py  test_models.py  test_node_agent.py  test_prompts.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/ai/: mod.rs  schema.rs
src-tauri/src/commands/: ai_commands.rs  backup_commands.rs  direct_ai.rs  drop_commands.rs  mod.rs  sync_commands.rs
src-tauri/src/config/: keyring.rs  manager.rs  mod.rs
src-tauri/src/error/: mod.rs  recovery.rs  retry.rs  types.rs
src-tauri/src/framework/: cleanup.rs  concurrency.rs  mod.rs  state_machine.rs
src-tauri/src/models/: config.rs  drop.rs  framework.rs  mod.rs
src-tauri/src/shortcuts/: manager.rs
src-tauri/src/sidecar/: health.rs  manager.rs  mod.rs  process.rs
src-tauri/src/storage/: assets.rs  conversation.rs  drop.rs  index.rs  json_metadata.rs  markdown.rs  migration.rs  mod.rs
src-tauri/src/sync/: mod.rs  sync_client.rs  sync_engine.rs
src-tauri/tests/: integration_test.rs
src/hooks/: useAIChat.ts  useAPIKeys.ts  useAppEvents.ts  useConversation.ts  useDrops.ts  useFramework.ts  useSidecar.ts
src/i18n/: index.tsx
src/pages/: CanvasPage.tsx  Home.tsx  MindscapePage.tsx  RawInbox.tsx  Settings.tsx
src/prompts/: index.ts
src/stores/: dropStore.ts  frameworkStore.ts  mindscapeStore.ts  syncStore.ts
src/types/: ai.ts  config.ts  conversation.ts  drop.ts  events.ts  sync.ts  (+3 more)
(+79 files in other folders)
