[package]
name = "cluemind"
version = "0.3.0"
description = "AI-driven knowledge architecture engine"
authors = ["junwide"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-global-shortcut = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
keyring = "2.0"
toml = "0.8"
dirs = "5.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "stream"] }

[dev-dependencies]
tempfile = "3.0"

[[test]]
name = "schema_test"
path = "../tests/rust/schema_test.rs"

[[test]]
name = "framework_state_test"
path = "../tests/rust/framework_state_test.rs"

[[test]]
name = "error_handling_test"
path = "../tests/rust/error_handling_test.rs"
